--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ uvicorn==0.24.0.post1
 SQLAlchemy==2.0.23
 psycopg2==2.9.9
 mock==5.1.0
+psycopg2-binary==2.9.7
+python-decouple==3.8
+pydantic==2.5.3
